# learning_recommender

./: .coverage  .flake8  README.md  app.py  chatbot_cli.py  pyproject.toml  requirements.txt  run_streamlit.sh
.github/workflows/: ci.yml
learning_recommender/: cli.py
learning_recommender.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
learning_recommender/recommender/: __init__.py  chatbot.py  chatbot_demo.py  collaborative.py  deepseek_chatbot.py  dkt.py  models.py  rasa_chatbot.py  rule_based.py
tests/: test_chatbot.py  test_collaborative.py  test_rule_engine.py
